SynProdGITV1/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Opportunity Product External ID used for data migration.</description>
    <externalId>true</externalId>
    <label>Opportunity Product External ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>