SynProdGITV1/force-app/main/default/objects/OpportunityLineItem/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Sales price of the product line item - represents the total sales price of the product in the opportunity.</description>
    <formula>Revenue_Unit__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales price / unit times the quantity</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>