SynProdGITV1/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Unit__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Unit__c</fullName>
    <description>Sales Price of the product per unit</description>
    <inlineHelpText>Sales price per unit - this is the expected revenue per unit</inlineHelpText>
    <label>Price / Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>