SynProdGITV1/force-app/main/default/objects/OpportunityLineItem/fields/SAP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_ID__c</fullName>
    <description>SS2-T22 &amp; SSP-292 External Id to SAP system</description>
    <formula>PricebookEntry.Product2.Product_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product ID</label>
    <type>Text</type>
</CustomField>