SynProdGITV1/force-app/main/default/objects/OpportunityLineItem/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS2-T22 &amp; SSP-292 Unit of measure related for the product.</description>
    <inlineHelpText>Unit of Measure of the Product</inlineHelpText>
    <label>Unit</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>